# LabWorks

./: .gitignore  README.md
FAaP/Sem1/LabWork_1/: CMakeLists.txt  Problem1.cpp  Problem2.cpp  Problem3.cpp  Problem4.cpp  Problem5.cpp  Problem61.cpp  Problem62.cpp  Problem63.cpp  Problem67.cpp  Problem68.cpp  Problem7.cpp  Problem8.cpp  Problem9.cpp
FAaP/Sem1/LabWork_2/: CMakeLists.txt  Problem1.cpp  Problem10.cpp  Problem11.cpp  Problem12.cpp  Problem13.cpp  Problem14.cpp  Problem2.cpp  Problem3.cpp  Problem4_1.cpp  Problem4_2.cpp  Problem5.cpp  Problem6.cpp  Problem7.cpp  Problem8.cpp  Problem9.cpp  Worst_Problem.cpp
FAaP/Sem1/LabWork_3/: 12.cpp  CMakeLists.txt  Problem1.cpp  Problem2.cpp  Problem3.cpp  Problem4_1.cpp  Problem4_2.cpp  Problem5.cpp  Problem6.cpp  Problem7.cpp  Problem7dlinkafast.cpp  Problem7dlinkaslow.cpp  Problem7tripleangle.cpp  Problem8.cpp  Problem9.cpp  Problem9new.cpp  Problem9newnew.cpp
FAaP/Sem1/LabWork_4/: CMakeLists.txt  Problem1.cpp  Problem10.cpp  Problem11.cpp  Problem12.cpp  Problem13.cpp  Problem13forexp.cpp  Problem2.cpp  Problem3.cpp  Problem4.cpp  Problem5.cpp  Problem6.cpp  Problem7.cpp  Problem8.cpp  Problem9.cpp  Problem9new.cpp  Time.cpp  ТАБЛИЦА.xlsx
FAaP/Sem1/LabWork_4/F/: Secret.cpp
FAaP/Sem1/LabWork_5/: CMakeLists.txt
FAaP/Sem1/LabWork_5/Input/: Input.h  REMAKEInput.cpp
FAaP/Sem1/LabWork_5/Laba5Libs/: CMakeLists.txt  Problem1.cpp  Problem2.cpp
FAaP/Sem1/LabWork_5/Problem1/: Problem1.cpp  Problem1CMakeLists.cmake
FAaP/Sem1/LabWork_5/Problem1/lib/: lib.h
FAaP/Sem1/LabWork_5/Problem2/: Problem2.cpp
FAaP/Sem1/LabWork_5/Problem3/: Problem3.cpp  Problem3Cmake.cmake
FAaP/Sem1/LabWork_5/Problem3/tests/: Test3.cpp  Test3Code.cpp
FAaP/Sem1/LabWork_5/Problem4/: Problem4.cpp  Problem4Cmake.cmake
FAaP/Sem1/LabWork_5/Problem4/tests/: Test4.cpp
FAaP/Sem1/LabWork_5/Problem5/: Problem5.cpp  Problem5Cmake.cmake
FAaP/Sem1/LabWork_5/Problem5/tests/: Test5.cpp  Test5Code.cpp
FAaP/Sem1/LabWork_6/: CMakeLists.txt
FAaP/Sem1/LabWork_6/Input/: Input.cpp
FAaP/Sem1/LabWork_6/Solves/: 1.cpp  2.cpp  3.cpp  4.cpp  41.cpp  5.cpp  6.cpp  7.cpp  8.cpp
FAaP/Sem1/LabWork_6/TestsCode/5/: 5.cpp  Tests5.cpp
FAaP/Sem1/LabWork_6/TestsCode/6/: 6.cpp  Tests6.cpp
FAaP/Sem1/LabWork_6/TestsCode/7/: 7.cpp  Tests7.cpp
FAaP/Sem1/LabWork_6/TestsCode/8/: 8.cpp  Tests8.cpp
FAaP/Sem1/LabWork_7/: CMakeLists.txt
FAaP/Sem1/LabWork_7/InputCheck/: Input.cpp  InputBinary.cpp  InputBinary.h
FAaP/Sem1/LabWork_7/Problem1/: 1.cpp
FAaP/Sem1/LabWork_7/Problem2/: 2.cpp
FAaP/Sem1/LabWork_7/Problem3/: 3.cpp
FAaP/Sem1/LabWork_7/Problem6/: 6.cpp
FAaP/Sem1/LabWork_7/Problem7/: 7.cpp
Programming/Sem2/LabWork_1/: LABA1.sln
Programming/Sem2/LabWork_1/_353505_Mogilevec/: Program.cs  _353505_Mogilevec.csproj
Programming/Sem2/LabWork_2/: LAB2.sln
Programming/Sem2/LabWork_2/LAB2Task1/: Program.cs
Programming/Sem2/LabWork_2/LABA2Task2/: Program.cs
Programming/Sem2/LabWork_3/: Lab3.sln
Programming/Sem2/LabWork_3/Task1/: AnsWriter.cs  ArgsReader.cs  ProblemSolver.cs  Program.cs  TrigonometryFunctionCalculator.cs
Programming/Sem2/LabWork_3/Task2/: Program.cs
Programming/Sem2/LabWork_3/Task2/Services/: BranchDefiner.cs  Function.cs  Solver.cs  ZValueReader.cs
Programming/Sem2/LabWork_3/Task3/: Program.cs
Programming/Sem2/LabWork_3/Task3/Services/: DateService.cs  DateServiceDemo.cs  DayMonthYearIntReader.cs
Programming/Sem2/LabWork_4/: Lab4.sln
Programming/Sem2/LabWork_4/Lab4/: Airport.cs  AirportDemonstration.cs  Program.cs  Ticket.cs
Programming/Sem2/LabWork_5/: Lab5.sln
Programming/Sem2/LabWork_5/Lab5/: Airport.cs  AirportDemo.cs  Passenger.cs  Program.cs  Tarrif.cs  Ticket.cs
Programming/Sem2/LabWork_6/: AbstractCar.cs  Car.cs  ClassDiagram1.cd  Demo.cs  Lab6.csproj  Lab6.sln  Program.cs  Truck.cs
Programming/Sem2/LabWork_7/: Demo.cs  Lab7.sln  Program.cs  QuadraticEquasion.cs
