cmake_minimum_required(VERSION 3.26)
project(Laba_2)

set(CMAKE_CXX_STANDARD 17)

add_executable(Laba_2_1 Problem1.cpp)
add_executable(Laba_2_2 Problem2.cpp)
add_executable(Laba_2_3 Problem3.cpp)
add_executable(Laba_2_41 Problem4_1.cpp)
add_executable(Laba_2_42 Problem4_2.cpp)
add_executable(Laba_2_5 Problem5.cpp)
add_executable(Laba_2_6 Problem6.cpp)
add_executable(Laba_2_7 Problem7.cpp)
add_executable(Laba_2_8 Problem8.cpp)
add_executable(Laba_2_9 Problem9.cpp)
add_executable(Laba_2_10 Problem10.cpp)
add_executable(Laba_2_11 Problem11.cpp)
add_executable(Laba_2_12 Problem12.cpp)
add_executable(Laba_2_13 Problem13.cpp)
add_executable(Laba_2_14 Problem14.cpp)
add_executable(Laba_2_15 Worst_Problem.cpp)