cmake_minimum_required(VERSION 3.26)
project(Laba_3)

set(CMAKE_CXX_STANDARD 17)

add_executable(Laba_31 Problem1.cpp)
add_executable(Laba_32 Problem2.cpp)
add_executable(Laba_33 Problem3.cpp)
add_executable(Laba_341 Problem4_1.cpp)
add_executable(Laba_342 Problem4_2.cpp)
add_executable(Laba_35 Problem5.cpp)
add_executable(Laba_36 Problem6.cpp)
add_executable(Laba_37 Problem7.cpp)
add_executable(Laba_38 Problem8.cpp)
add_executable(Laba_39 Problem9.cpp)
add_executable(Laba_39new Problem9new.cpp)
add_executable(Laba_39newnew Problem9newnew.cpp)
add_executable(Psinus Problem7tripleangle.cpp)
add_executable(Psinus2 Problem7dlinkafast.cpp)
add_executable(Psinus3 Problem7dlinkaslow.cpp)