cmake_minimum_required(VERSION 3.26)
project(Laba_4)

set(CMAKE_CXX_STANDARD 17)

add_executable(Laba_41 Problem1.cpp)
add_executable(Laba_42 Problem2.cpp)
add_executable(Laba_43 Problem3.cpp)
add_executable(Laba_44 Problem4.cpp)
add_executable(Laba_45 Problem5.cpp)
add_executable(Laba_46 Problem6.cpp)
add_executable(Laba_47 Problem7.cpp)
add_executable(Laba_48 Problem8.cpp)
add_executable(Laba_49 Problem9.cpp)
add_executable(Laba_49new Problem9new.cpp)
add_executable(Laba_410 Problem10.cpp)
add_executable(Laba_411 Problem11.cpp)
add_executable(Laba_412 Problem12.cpp)
add_executable(Laba_413exp Problem13forexp.cpp)
add_executable(Laba_413 Problem13.cpp)
add_executable(secret F/Secret.cpp)
add_executable(calc Time.cpp)