cmake_minimum_required(VERSION 3.26)
project(Laba7)

set(CMAKE_CXX_STANDARD 17)

add_executable(Problem1 Problem1/1.cpp InputCheck/InputBinary.cpp InputCheck/InputBinary.h)
add_executable(Problem2 Problem2/2.cpp InputCheck/InputBinary.cpp InputCheck/InputBinary.h)
add_executable(Problem3 Problem3/3.cpp)
add_executable(Problem7 Problem7/7.cpp)
add_executable(Problem6 Problem6/6.cpp InputCheck/Input.cpp InputCheck/Input.h)